--- a/.env
+++ b/.env
@@ -1,27 +1,27 @@
 # Traefik Variables
 TRAEFIK_IMAGE_TAG=traefik:2.9
 TRAEFIK_LOG_LEVEL=WARN
-TRAEFIK_ACME_EMAIL=callvaldemar@gmail.com
-TRAEFIK_HOSTNAME=traefik.zabbix.heyvaldemar.net
+TRAEFIK_ACME_EMAIL=romm@aviatx.ru
+TRAEFIK_HOSTNAME=mon.aviatx.ru
 # Basic Authentication for Traefik Dashboard
-# Username: traefikadmin
+# Username: admin
 # Passwords must be encoded using MD5, SHA1, or BCrypt https://hostingcanada.org/htpasswd-generator/
-TRAEFIK_BASIC_AUTH=traefikadmin:$$2y$$10$$sMzJfirKC75x/hVpiINeZOiSm.Jkity9cn4KwNkRvO7hSQVFc5FLO
+TRAEFIK_BASIC_AUTH=admin:$2y$10$QM/BPwGJ3waJlbhs/2aAS.QVlWAbkEUcYSZvhE1N5yHmUaY4ngQhy
 
 # Zabbix Variables
 ZABBIX_POSTGRES_IMAGE_TAG=postgres:15
-ZABBIX_SERVER_IMAGE_TAG=zabbix/zabbix-server-pgsql:6.4.6-ubuntu
-ZABBIX_WEB_IMAGE_TAG=zabbix/zabbix-web-nginx-pgsql:6.4.6-ubuntu
-ZABBIX_AGENT_IMAGE_TAG=zabbix/zabbix-agent2:6.4.6-ubuntu
+ZABBIX_SERVER_IMAGE_TAG=zabbix/zabbix-server-pgsql:7.0-ubuntu
+ZABBIX_WEB_IMAGE_TAG=zabbix/zabbix-web-nginx-pgsql:7.0-ubuntu
+ZABBIX_AGENT_IMAGE_TAG=zabbix/zabbix-agent2:7.0-ubuntu
 ZABBIX_DB_NAME=zabbixdb
 ZABBIX_DB_USER=zabbixdbuser
-ZABBIX_DB_PASSWORD=C7GRpMXAdZR5pZi4gyqr
-ZABBIX_DASHBOARD_HOSTNAME=dashboard.zabbix.heyvaldemar.net
+ZABBIX_DB_PASSWORD=#change#
+ZABBIX_DASHBOARD_HOSTNAME=mon.aviatx.ru
 ZABBIX_CACHESIZE=1G
 # Timezone inside container
 # A list of these tz database names can be looked up at Wikipedia
 # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-ZABBIX_TIMEZONE=America/New_York
+ZABBIX_TIMEZONE=Europe/Moscow
 
 # Backup Variables
 ZABBIX_BACKUP_INIT_SLEEP=30m
