--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ TRAEFIK_BASIC_AUTH=admin:$2y$10$QM/BPwGJ3waJlbhs/2aAS.QVlWAbkEUcYSZvhE1N5yHmUaY4
 
 # Zabbix Variables
 ZABBIX_POSTGRES_IMAGE_TAG=postgres:15
-ZABBIX_SERVER_IMAGE_TAG=zabbix/zabbix-server-pgsql:ubuntu-7.0.*
-ZABBIX_WEB_IMAGE_TAG=zabbix/zabbix-web-nginx-pgsql:ubuntu-7.0.*
-ZABBIX_AGENT_IMAGE_TAG=zabbix/zabbix-agent2:ubuntu-7.0.*
+ZABBIX_SERVER_IMAGE_TAG=zabbix/zabbix-server-pgsql:ubuntu-7.0-latest
+ZABBIX_WEB_IMAGE_TAG=zabbix/zabbix-web-nginx-pgsql:ubuntu-7.0-latest
+ZABBIX_AGENT_IMAGE_TAG=zabbix/zabbix-agent2:ubuntu-7.0-latest
 ZABBIX_DB_NAME=zabbixdb
 ZABBIX_DB_USER=zabbixdbuser
 ZABBIX_DB_PASSWORD=#change#
